add temperature in fahrenheit and celsius

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1>Get Weather Conditions From Anywhere!</h1>
       <label for="location">Enter a location:</label>
       <input id="location" type="text">
-      <button class="btn-success" id="weatherLocation">Get Current Humidity!</button>
-      <button class="btn-success" id="weatherTemperature">Get Current Temperature!</button>
-      <div class="showWeather"></div>
+      <button class="btn-success" id="weatherLocation">Get Current Weather!</button><br>
+      <div><h4 class="showWeather"></h4></div>
+      <div><h4 class="showFahrenheit"></h4></div>
     </div>
   </body>
 </html>
